fix: payment with promotion
