# green-store/app/lib/api/models/index.ts
@@ -25,12 +25,14 @@ export * from './paged-response-user-response';
 export * from './payment-method';
 export * from './payment-response';
 export * from './product-response';
+export * from './promotion-response';
 export * from './response-auth-response-dto';
 export * from './response-category-response';
 export * from './response-customer-register-request';
 export * from './response-customer-response';
 export * from './response-ienumerable-customer-response';
 export * from './response-ienumerable-inventory-response';
+export * from './response-ienumerable-promotion-response';
 export * from './response-ienumerable-revenue-response';
 export * from './response-ienumerable-top-seller-product-response';
 export * from './response-inventory-response';
